j'ai ajouté model et repository

--- a/pro/src/main/resources/application.properties
+++ b/pro/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=pro
+spring.jpa.open-in-view=true
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/fil_rouge?createDatabaseIfNotExist=True
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/fil_rouge?createDatabaseIfNotExist=True
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.show-sql= true
