--- a/pro/src/main/resources/application.properties
+++ b/pro/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=pro
 spring.jpa.open-in-view=true
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/fourth?createDatabaseIfNotExist=True
+spring.datasource.url=jdbc:mysql://localhost:3306/j?createDatabaseIfNotExist=True
 #spring.datasource.url=jdbc:mysql://mysqldb:3306/fil_rouge?createDatabaseIfNotExist=True
 spring.jpa.hibernate.ddl-auto=update
-#logging.level.org.springframework=DEBUG
+#spring.main.allow-bean-definition-overriding=true
 spring.datasource.username=root
 spring.jmx.enabled=true
 spring.datasource.password=
