update dto product

--- a/pro/src/main/resources/application.properties
+++ b/pro/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=pro
 spring.jpa.open-in-view=true
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/one?createDatabaseIfNotExist=True
+spring.datasource.url=jdbc:mysql://localhost:3306/two?createDatabaseIfNotExist=True
 #spring.datasource.url=jdbc:mysql://mysqldb:3306/fil_rouge?createDatabaseIfNotExist=True
 spring.jpa.hibernate.ddl-auto=update
 #spring.main.allow-bean-definition-overriding=true
