--- a/pro/src/main/resources/application.properties
+++ b/pro/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql= true
 server.port=1998
+
+# Set the maximum size for multipart requests
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+
+
