--- a/pro/sonar-project.properties
+++ b/pro/sonar-project.properties
@@ -2,3 +2,7 @@ sonar.projectKey=pro_project
 sonar.projectName=pro
 sonar.sources=src
 sonar.host.url=http://localhost:9000/
+
+sonar.login=squ_c3d5a9c18d9e13eb52da64fdd2986351d2a5a161
+sonar.java.binaries=target/classes
+
