--- a/pro/src/main/resources/application.properties
+++ b/pro/src/main/resources/application.properties
@@ -2,15 +2,22 @@ spring.application.name=pro
 spring.jpa.open-in-view=true
 spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://localhost:3306/two?createDatabaseIfNotExist=True
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/springAngular?createDatabaseIfNotExist=True
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/springAngular?createDatabaseIfNotExist=True
+
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/springAngular?createDatabaseIfNotExist=True
+
 
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.username=root
 spring.jmx.enabled=true
 spring.datasource.password=
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 spring.jpa.show-sql= true
-server.port=1998
+server.port= 1998
 
 # Set the maximum size for multipart requests
 spring.servlet.multipart.max-file-size=2MB
