--- a/pro/src/main/resources/application.properties
+++ b/pro/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=pro
 spring.jpa.open-in-view=true
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/two?createDatabaseIfNotExist=True
-#spring.datasource.url=jdbc:mysql://mysqldb:3306/springAngular?createDatabaseIfNotExist=True
-#spring.datasource.url=jdbc:mysql://mysqldb:3306/springAngular?createDatabaseIfNotExist=True
+#spring.datasource.url=jdbc:mysql://localhost:3306/two?createDatabaseIfNotExist=True
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/two?createDatabaseIfNotExist=True
+spring.datasource.url=jdbc:mysql://localhost:3306/spring?createDatabaseIfNotExist=True
 
 #spring.datasource.url=jdbc:mysql://mysqldb:3306/springAngular?createDatabaseIfNotExist=True
 
