--- a/pro/src/main/resources/application.properties
+++ b/pro/src/main/resources/application.properties
@@ -23,7 +23,7 @@ server.port= 1998
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
-
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mail.MailSenderAutoConfiguration
 
 
 
