--- a/pro/pom.xml
+++ b/pro/pom.xml
@@ -142,6 +142,14 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
