--- a/pro/Jenkinsfile
+++ b/pro/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
             steps {
                 dir('pro') {
                     bat "mvn clean install"
-                    bat "mvn test"
+                    //bat "mvn test"
                 }
             }
         }
