--- a/pro/src/main/resources/application.properties
+++ b/pro/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=pro
 spring.jpa.open-in-view=true
 spring.jpa.database=MYSQL
 spring.sql.init.platform=mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/spring?createDatabaseIfNotExist=True
-spring.datasource.url=jdbc:mysql://mysqldb:3306/spring?createDatabaseIfNotExist=True
+spring.datasource.url=jdbc:mysql://localhost:3306/spring?createDatabaseIfNotExist=True
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/spring?createDatabaseIfNotExist=True
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.jmx.enabled=true
@@ -13,6 +13,8 @@ spring.jpa.show-sql= true
 server.port= 1998
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+spring.test.skip=true
+
 
 
 
