update file jenkins

--- a/pro/Jenkinsfile
+++ b/pro/Jenkinsfile
@@ -3,7 +3,6 @@ pipeline {
 
     tools {
         maven 'mvn'
-        jdk 'jdk21' // Ensure this matches the name in Jenkins Global Tool Configuration
     }
 
     environment {
@@ -15,6 +14,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
+                // Checkout code from the main branch
                 git branch: 'main', url: 'https://github.com/saidtalfana/projet-fil-Rouge.git'
             }
         }
@@ -22,6 +22,7 @@ pipeline {
         stage('Build and Unit Tests') {
             steps {
                 dir('pro') {
+                    // Clean, install dependencies, and run tests
                     bat "mvn clean install"
                     bat "mvn test"
                 }
@@ -30,6 +31,7 @@ pipeline {
 
         stage('SonarQube Analysis') {
             steps {
+                // Run SonarQube analysis
                 withSonarQubeEnv(SONARQUBE_SERVER) {
                     bat "mvn sonar:sonar -Dsonar.projectKey=pro_services -Dsonar.host.url=http://localhost:9000 -Dsonar.token=${SONAR_TOKEN}"
                 }
@@ -38,6 +40,7 @@ pipeline {
 
         stage('Quality Gate Check') {
             steps {
+                // Wait for SonarQube Quality Gate results
                 timeout(time: 5, unit: 'MINUTES') {
                     waitForQualityGate abortPipeline: true
                 }
@@ -47,7 +50,14 @@ pipeline {
         stage('Build Docker Images') {
             steps {
                 dir('pro') {
-                    bat "docker build -t pro-service-image ."
+                    // Build the Docker image
+                    script {
+                        try {
+                            bat "docker build -t pro-service-image ."
+                        } catch (Exception e) {
+                            error "Docker build failed: ${e.message}"
+                        }
+                    }
                 }
             }
         }
@@ -55,7 +65,8 @@ pipeline {
         stage('Tag and Push Docker Images') {
             steps {
                 script {
-                    def dockerTag = "${env.BUILD_NUMBER}"  // Use build number for the Docker tag
+                    // Tag the image with the build number
+                    def dockerTag = "${env.BUILD_NUMBER}"
                     docker.withRegistry("https://index.docker.io/v1/", 'docker-hub-credential') {
                         bat """
                             docker tag pro-service-image:latest ${DOCKER_HUB_REPO}:${dockerTag}
@@ -69,6 +80,7 @@ pipeline {
 
     post {
         always {
+            // Clean the workspace after the build
             cleanWs()
         }
         success {
