--- a/pro/Jenkinsfile
+++ b/pro/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
         stage('SonarQube Analysis') {
             steps {
                 // Run SonarQube analysis
-                withSonarQubeEnv(SONARQUBE_SERVER) {
+                withSonarQubeEnv(sonar-server) {
                     bat "mvn sonar:sonar -Dsonar.projectKey=pro_services -Dsonar.host.url=http://localhost:9000 -Dsonar.token=${SONAR_TOKEN}"
                 }
             }
