--- a/pro/Jenkinsfile
+++ b/pro/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
         stage('SonarQube Analysis') {
             steps {
                 // Run SonarQube analysis
-                withSonarQubeEnv(sonar-server) {
+                withSonarQubeEnv("${SONARQUBE_SERVER}") { // Use quotes for variable
                     bat "mvn sonar:sonar -Dsonar.projectKey=pro_services -Dsonar.host.url=http://localhost:9000 -Dsonar.token=${SONAR_TOKEN}"
                 }
             }
