--- a/pro/Jenkinsfile
+++ b/pro/Jenkinsfile
@@ -8,13 +8,11 @@ pipeline {
     environment {
         SONARQUBE_SERVER = 'sonar-server'
         DOCKER_HUB_REPO = 'saidtalfana98/projet-fil-rouge'
-        // Removed direct assignment of SONAR_TOKEN for better security
     }
 
     stages {
         stage('Checkout') {
             steps {
-                // Checkout code from the main branch
                 git branch: 'main', url: 'https://github.com/saidtalfana/projet-fil-Rouge.git'
             }
         }
@@ -22,9 +20,18 @@ pipeline {
         stage('Build and Unit Tests') {
             steps {
                 dir('pro') {
-                    // Clean, install dependencies, and run tests
                     bat "mvn clean install"
                     bat "mvn test"
+                }
+            }
+        }
+
+        stage('Cleanup') {
+            steps {
+                dir('pro') {
+                    // Clean up scanner and sonar directories
+                    bat "rmdir /s /q .scannerwork"
+                    bat "rmdir /s /q target\\sonar"
                 }
             }
         }
@@ -33,7 +40,6 @@ pipeline {
             steps {
                 dir('pro') {
                     withSonarQubeEnv('sonar-server') {
-                        // Use withCredentials to handle SONAR_TOKEN securely
                         withCredentials([string(credentialsId: 'sonar-credential', variable: 'SONAR_TOKEN')]) {
                             bat "mvn sonar:sonar -Dsonar.projectKey=pro_services -Dsonar.host.url=http://localhost:9000 -Dsonar.token=${SONAR_TOKEN}"
                         }
@@ -44,7 +50,6 @@ pipeline {
 
         stage('Quality Gate Check') {
             steps {
-                // Wait for SonarQube Quality Gate results
                 timeout(time: 15, unit: 'MINUTES') {
                     waitForQualityGate abortPipeline: true
                 }
@@ -54,7 +59,6 @@ pipeline {
         stage('Build Docker Images') {
             steps {
                 dir('pro') {
-                    // Build the Docker image
                     script {
                         try {
                             bat "docker build -t pro-service-image ."
@@ -69,7 +73,6 @@ pipeline {
         stage('Tag and Push Docker Images') {
             steps {
                 script {
-                    // Tag the image with the build number
                     def dockerTag = "${env.BUILD_NUMBER}"
                     docker.withRegistry("https://index.docker.io/v1/", 'docker-hub-credential') {
                         bat """
@@ -84,7 +87,6 @@ pipeline {
 
     post {
         always {
-            // Clean the workspace after the build
             cleanWs()
         }
         success {
