--- a/pro/Jenkinsfile
+++ b/pro/Jenkinsfile
@@ -11,6 +11,16 @@ pipeline {
     }
 
     stages {
+        stage('Cleanup') {
+            steps {
+                dir('pro') {
+                    echo "Cleaning up scanner and sonar directories..."
+                    bat "if exist .scannerwork (rmdir /s /q .scannerwork) else echo No .scannerwork directory found"
+                    bat "if exist target\\sonar (rmdir /s /q target\\sonar) else echo No target\\sonar directory found"
+                }
+            }
+        }
+
         stage('Checkout') {
             steps {
                 git branch: 'main', url: 'https://github.com/saidtalfana/projet-fil-Rouge.git'
@@ -40,7 +50,7 @@ pipeline {
 
         stage('Quality Gate Check') {
             steps {
-                timeout(time: 30, unit: 'MINUTES') {
+                timeout(time: 15, unit: 'MINUTES') {
                     waitForQualityGate abortPipeline: true
                 }
             }
