delete quality gate

--- a/pro/Jenkinsfile
+++ b/pro/Jenkinsfile
@@ -39,13 +39,13 @@ pipeline {
             }
         }
 
-        stage('Quality Gate Check') {
-            steps {
-                timeout(time: 30, unit: 'MINUTES') {
-                    waitForQualityGate abortPipeline: true
-                }
-            }
-        }
+//         stage('Quality Gate Check') {
+//             steps {
+//                 timeout(time: 30, unit: 'MINUTES') {
+//                     waitForQualityGate abortPipeline: true
+//                 }
+//             }
+//         }
 
         stage('Build Docker Images') {
             steps {
