--- a/pro/src/main/resources/application.properties
+++ b/pro/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=pro
 spring.jpa.open-in-view=true
 spring.jpa.database=MYSQL
 spring.sql.init.platform=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/spring?createDatabaseIfNotExist=True
+spring.datasource.url=jdbc:mysql://localhost:3306/spring0?createDatabaseIfNotExist=True
 #spring.datasource.url=jdbc:mysql://mysqldb:3306/spring?createDatabaseIfNotExist=True
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
@@ -14,13 +14,13 @@ server.port= 1998
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 spring.test.skip=true
-
+spring.jpa.enabled=false
 logging.level.org.springframework.web=DEBUG
 logging.level.com.fasterxml.jackson=DEBUG
 
 
 # Flyway settings
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
 
