--- a/pro/src/main/resources/application.properties
+++ b/pro/src/main/resources/application.properties
@@ -2,26 +2,22 @@ spring.application.name=pro
 spring.jpa.open-in-view=true
 spring.jpa.database=MYSQL
 spring.sql.init.platform=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/spring0?createDatabaseIfNotExist=True
+spring.datasource.url=jdbc:mysql://localhost:3306/spring?createDatabaseIfNotExist=True
 #spring.datasource.url=jdbc:mysql://mysqldb:3306/spring?createDatabaseIfNotExist=True
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.jmx.enabled=true
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql= true
 server.port= 1998
-spring.servlet.multipart.max-file-size=2MB
-spring.servlet.multipart.max-request-size=2MB
+spring.datasource.hikari.data-source-properties.maxAllowedPacket=16777216
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 spring.test.skip=true
-spring.jpa.enabled=false
 logging.level.org.springframework.web=DEBUG
 logging.level.com.fasterxml.jackson=DEBUG
 
 
-# Flyway settings
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
 
 
 
