--- a/pro/src/main/resources/application.properties
+++ b/pro/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=pro
 spring.jpa.open-in-view=true
 spring.jpa.database=MYSQL
 spring.sql.init.platform=mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/servicelink?createDatabaseIfNotExist=True
-spring.datasource.url=jdbc:mysql://mysqldb:3306/servicelink?createDatabaseIfNotExist=True
+spring.datasource.url=jdbc:mysql://localhost:3306/link?createDatabaseIfNotExist=True
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/link?createDatabaseIfNotExist=True
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.jmx.enabled=true
